[package]
name = "lockedroom"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
html = "0.6.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4.38"
tower-http = { version = "0.5.2", features = ["fs"]}
image = { version = "0.25.1"}
bytes = "1.6.0"
axum_typed_multipart = "0.11.1"
ravif = "0.11.5"
htmlentity = "1.3.2"
nom = "7.1.3"
rand = "0.8.5"
serde_urlencoded = "0.7.1"
tower-sessions = "0.12.2"
axum-login = "0.15.3"
async-trait = "0.1.80"
password-auth = "1.0.0"
thiserror = "1.0.61"
palette = "0.7.6"
sha2 = "0.10.8"
